--- a/Retrieval_Augmented_Generation_(RAG).ipynb
+++ b/Retrieval_Augmented_Generation_(RAG).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMhu7LBNqmcM0N7vzP/7kfa",
+      "authorship_tag": "ABX9TyMbhmQl8xGQAvIgYzR16F4j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2857,16 +2857,11 @@
         "### **Steps to Build the Indexing System**\n",
         "1. **Define a Knowledge Base (Corpus)**: This is the collection of documents or pieces of information that the system can retrieve.\n",
         "\n",
-        "2. **Generate Dense Embeddings**:\n",
-        "   - Each document is converted into a dense vector representation using a **pre-trained embedding model** (e.g., SentenceTransformers).\n",
-        "   - Dense embeddings capture the semantic meaning of the text, making it easier to find similar content.\n",
+        "2. **Generate Dense Embeddings**: Each document is converted into a dense vector representation using a **pre-trained embedding model** (e.g., SentenceTransformers). Dense embeddings capture the semantic meaning of the text, making it easier to find similar content.\n",
         "\n",
-        "3. **Create the Index**:\n",
-        "   - Using pandas for indexing allows you to create a more human-readable representation of the documents and their embeddings, while still enabling retrieval.\n",
+        "3. **Create the Index**: Using pandas for indexing allows you to create a more human-readable representation of the documents and their embeddings, while still enabling retrieval.\n",
         "\n",
-        "4. **Retrieve Context**:\n",
-        "   - When a query is provided, it is converted into an embedding using the same model.\n",
-        "   - The index is queried to find the most relevant documents based on their similarity to the query.\n"
+        "4. **Retrieve Context**: When a query is provided, it is converted into an embedding using the same model. The index is queried to find the most relevant documents based on their similarity to the query.\n"
       ],
       "metadata": {
         "id": "l-Q7obJVanHv"
@@ -3119,13 +3114,13 @@
         "\n",
         "Here are some exercises:\n",
         "\n",
-        "1. **Add More Documents**: Expand the corpus with domain-specific documents (e.g., healthcare or education) and build a question-answering system tailored to that domain.\n",
+        "1. Add More Documents: Expand the corpus with domain-specific documents (e.g., healthcare or education) and build a question-answering system tailored to that domain.\n",
         "\n",
-        "2. **Enhance Retrieval**: Modify the retrieval function to use more complex strategies.\n",
+        "2. Enhance Retrieval: Modify the retrieval function to use more complex strategies.\n",
         "\n",
-        "3. **Fine-Tune the Generator**: Fine-tune the generation model on your dataset for more accurate, context-aware responses.\n",
+        "3. Fine-Tune the Generator: Fine-tune the generation model on your dataset for more accurate, context-aware responses.\n",
         "\n",
-        "4. **Use LLaMA for Generation**: Replace GPT with LLaMA (e.g., `meta-llama/Llama-2-7b-hf`) for response generation.\n"
+        "4. Use LLaMA for Generation: Replace GPT with LLaMA (e.g., `meta-llama/Llama-2-7b-hf`) for response generation.\n"
       ],
       "metadata": {
         "id": "vklrRVukeFbn"
